Commit with all pages necessary and some content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pete Schaaf</title>
+</head>
+<body>
+    <h1>Pete Schaaf</h1>
+    <nav><ul>
+        <li><a href = "about.html">About</a></li>
+        <li><a href = "projects.html">Projects</a></li>
+        <li><a href = "contact.html">Contact</a></li>
+        <li><a href = "skills.html">Skills</a></li>
+    </ul></nav>
+    <p>This is a paragraph about me</p>
+    
+</body>
+</html>
