--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete Schaaf</title>
+    <link rel="icon" href="">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <h1>Pete Schaaf</h1>
-    <nav><ul>
-        <li><a href = "about.html">About</a></li>
-        <li><a href = "projects.html">Projects</a></li>
-        <li><a href = "contact.html">Contact</a></li>
-        <li><a href = "skills.html">Skills</a></li>
-    </ul></nav>
-    <p>This is a paragraph about me</p>
-    
+    <nav>
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed. Elit pellentesque habitant morbi tristique
+        senectus. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. Ut faucibus pulvinar elementum
+        integer. Nunc sed id semper risus in. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque.
+        Viverra nam libero justo laoreet. Nibh praesent tristique magna sit. Feugiat nisl pretium fusce id velit. Ut
+        consequat semper viverra nam libero justo laoreet. Vestibulum mattis ullamcorper velit sed ullamcorper morbi.
+        Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sollicitudin ac orci phasellus egestas
+        tellus rutrum tellus. Cursus in hac habitasse platea dictumst quisque sagittis purus. Risus commodo viverra
+        maecenas accumsan lacus vel. Lectus magna fringilla urna porttitor rhoncus dolor purus. Tristique senectus et
+        netus et malesuada. Urna id volutpat lacus laoreet non curabitur gravida arcu. Ac turpis egestas sed tempus urna
+        et pharetra pharetra massa.</p>
+
 </body>
+
 </html>
