Changes to all pages, added navigation links and beginning of dropwdown menu

--- a/skills.html
+++ b/skills.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
-    <link rel = "icon" href = "">
+    <link rel="icon" href="./Pete_Solid.png">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <nav class = "dropdown-nav">
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
