--- a/about.html
+++ b/about.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel = "icon" href = "">
+    <link rel="icon" href="./Pete_Solid.png">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>HEADER</h1>
+    <h1>About</h1>
+    
+    <nav class = "dropdown-nav">
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
