--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="icon" href="./Pete_Solid.png">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1 class="contact">CONTACT ME</h1>
+    <nav class = "dropdown-nav">
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
+    <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a"><img src="./linkedin logo white.png" alt = "LinkedIn logo"></a>
+    <a href="https://www.github.com/peteschaaf"><img src="./github logo white.png" alt= "Github Logo"></a>
+    <a href="mailto:peteschaaf.19@gmail.com"><img src="./gmail logo white.png" alt = "Gmail Logo"></a>
     
 </body>
 </html>
