--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <h1>Pete Schaaf</h1>
-    <nav>
+    <h1>Pete Schaaf</h1>    
+    <div class = "dropdown">
+        <button class = "dropdown-button">Menu
+        <i class = "caret down"></i>
+    </button>
+    <nav class = "dropdown-content">
         <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -20,6 +24,7 @@
             <li><a href="skills.html">Skills</a></li>
         </ul>
     </nav>
+    </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed. Elit pellentesque habitant morbi tristique
         senectus. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. Ut faucibus pulvinar elementum
@@ -27,10 +32,7 @@
         Viverra nam libero justo laoreet. Nibh praesent tristique magna sit. Feugiat nisl pretium fusce id velit. Ut
         consequat semper viverra nam libero justo laoreet. Vestibulum mattis ullamcorper velit sed ullamcorper morbi.
         Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sollicitudin ac orci phasellus egestas
-        tellus rutrum tellus. Cursus in hac habitasse platea dictumst quisque sagittis purus. Risus commodo viverra
-        maecenas accumsan lacus vel. Lectus magna fringilla urna porttitor rhoncus dolor purus. Tristique senectus et
-        netus et malesuada. Urna id volutpat lacus laoreet non curabitur gravida arcu. Ac turpis egestas sed tempus urna
-        et pharetra pharetra massa.</p>
+        tellus rutrum tellus. </p>
 
 </body>
 
