working dropdown menu, color scheme WIP and struggling with image resizing.

--- a/index.html
+++ b/index.html
@@ -11,28 +11,19 @@
 </head>
 
 <body>
-    <h1>Pete Schaaf</h1>    
+    <!--start of menu button-->
     <div class = "dropdown">
-        <button class = "dropdown-button">Menu
-        <i class = "caret down"></i>
-    </button>
+        <button class = "dropdown-button">Menu</button>
     <nav class = "dropdown-content">
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="skills.html">Skills</a></li>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+            <a href="skills.html">Skills</a>
         </ul>
     </nav>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed. Elit pellentesque habitant morbi tristique
-        senectus. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. Ut faucibus pulvinar elementum
-        integer. Nunc sed id semper risus in. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque.
-        Viverra nam libero justo laoreet. Nibh praesent tristique magna sit. Feugiat nisl pretium fusce id velit. Ut
-        consequat semper viverra nam libero justo laoreet. Vestibulum mattis ullamcorper velit sed ullamcorper morbi.
-        Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Sollicitudin ac orci phasellus egestas
-        tellus rutrum tellus. </p>
+    <!--end of menu button-->
+    <h1>Pete Schaaf</h1>  
 
 </body>
 
