--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav class = "dropdown-nav">
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="skills.html">Skills</a></li>
+    <div class = "dropdown">
+        <button class = "dropdown-button">Menu</button>
+    <nav class = "dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>            
+            <a href="contact.html">Contact</a>
+            <a href="skills.html">Skills</a>
         </ul>
     </nav>
-    
+    </div>
+    <h1>Projects</h1>
 </body>
 </html>
