--- a/skills.html
+++ b/skills.html
@@ -9,14 +9,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav class = "dropdown-nav">
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="skills.html">Skills</a></li>
+    <div class = "dropdown">
+        <button class = "dropdown-button">Menu</button>
+    <nav class = "dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+            
         </ul>
     </nav>
-    
+    </div>
+    <h1>Skills</h1>
 </body>
 </html>
