--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,18 +10,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1 class="contact">CONTACT ME</h1>
-    <nav class = "dropdown-nav">
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="skills.html">Skills</a></li>
+    <div class = "dropdown">
+        <button class = "dropdown-button">Menu</button>
+    <nav class = "dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="skills.html">Skills</a>
         </ul>
     </nav>
-    <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a"><img src="./linkedin logo white.png" alt = "LinkedIn logo"></a>
-    <a href="https://www.github.com/peteschaaf"><img src="./github logo white.png" alt= "Github Logo"></a>
-    <a href="mailto:peteschaaf.19@gmail.com"><img src="./gmail logo white.png" alt = "Gmail Logo"></a>
-    
+    </div>
+    <h1 class = "contact">Contact</h1>
+    <div class = "icons">
+    <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a" target="blank"><img src="./linkedin logo white.png" alt = "LinkedIn logo"></a>
+    <a href="https://www.github.com/peteschaaf" target="blank"><img src="./github logo white.png" alt= "Github Logo"></a>
+    <a href="mailto:peteschaaf.19@gmail.com" target="blank"><img src="./gmail logo white.png" alt = "Gmail Logo"></a>
+    </div>
 </body>
 </html>
