I'm going to bed, I am going to scream. I need sleep and fresh eyes in the morning. This is just to make sure I am current. FFFFFFF

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +21,6 @@
     </nav>
     </div>
     <h1>About</h1>
-    
+    <h3>I am a 27 year old software developer from Columbus OH. I am currently attending We Can Code IT, a bootcamp based in Columbus. I love doing puzzles and coming up with unique solutions to problems. In my spare time, you can find me rock climbing, playing video games, or spending time with my dog (his name is Norman).</h3>
 </body>
 </html>
