--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,21 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <div class = "dropdown">
-        <button class = "dropdown-button">Menu</button>
-    <nav class = "dropdown-content">
+    <div class="dropdown">
+        <button class="dropdown-button">Menu</button>
+        <nav class="dropdown-content">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
-            
-        </ul>
-    </nav>
+
+            </ul>
+        </nav>
     </div>
     <h1>Skills</h1>
+    <h3>Java, HTML, CSS</h3><!--this will turn into a table eventually with 2 columns listing numerous skills on both sides (not just 3 languages)-->
 </body>
+
 </html>
