idk what i did but i messed with something on accident and needed to update this thing again so i didn't get something weird tomorrow.

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <div class = "dropdown">
-        <button class = "dropdown-button">Menu</button>
-    <nav class = "dropdown-content">
+    <div class="dropdown">
+        <button class="dropdown-button">Menu</button>
+        <nav class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>            
+            <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="skills.html">Skills</a>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
     </div>
     <h1>Projects</h1>
+    <h3>This is a list of projects I have worked on with some icons showing fun and engaging graphics about said projects</h3>
 </body>
+
 </html>
