commit to update across devices

--- a/contact.html
+++ b/contact.html
@@ -9,22 +9,25 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <div class = "dropdown">
-        <button class = "dropdown-button">Menu</button>
-    <nav class = "dropdown-content">
+    <div class="dropdown">
+        <button class="dropdown-button">Menu</button>
+        <nav class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="skills.html">Skills</a>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
     </div>
-    <h1 class = "contact">Contact</h1>
-    <div class = "icons">
-    <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a" target="blank"><img src="./linkedin logo white.png" alt = "LinkedIn logo"></a>
-    <a href="https://www.github.com/peteschaaf" target="blank"><img src="./github logo white.png" alt= "Github Logo"></a>
-    <a href="mailto:peteschaaf.19@gmail.com" target="blank"><img src="./gmail logo white.png" alt = "Gmail Logo"></a>
+    <h1 class="contact">Contact</h1>
+    <div class="icons">
+        <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a" target="blank"><img src="./linkedin logo white.png"
+                alt="LinkedIn logo"></a>
+        <a href="https://www.github.com/peteschaaf" target="blank"><img src="./github logo white.png"
+                alt="Github Logo"></a>
+        <a href="mailto:peteschaaf.19@gmail.com" target="blank"><img src="./gmail logo white.png" alt="Gmail Logo"></a>
     </div>
 </body>
+
 </html>
