--- a/index.html
+++ b/index.html
@@ -12,19 +12,30 @@
 
 <body>
     <!--start of menu button-->
-    <div class = "dropdown">
-        <button class = "dropdown-button">Menu</button>
-    <nav class = "dropdown-content">
-            <a href="about.html">About</a>
+    <div class="dropdown">
+        <button class="dropdown-button">Menu</button>
+        <nav class="dropdown-content">
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
             <a href="skills.html">Skills</a>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
     </div>
     <!--end of menu button-->
-    <h1>Pete Schaaf</h1>  
+    <h1 class="name">Pete Schaaf</h1>
+    <h3 class="about">About Me</h3>
+    <div class="about-content">
+        <div class="self-photo-wrapper"><img src=./the_homie.jpg alt="Self protrait" class="self-photo">
 
+            <p class="about-me-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Elementum integer enim neque volutpat ac tincidunt. Et
+                molestie ac
+                feugiat sed lectus vestibulum mattis ullamcorper velit. Venenatis lectus magna fringilla urna porttitor
+                rhoncus
+                dolor purus non. Nibh cras pulvinar mattis nunc sed blandit libero volutpat.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
