--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,6 @@
         <button class="dropdown-button">Menu</button>
         <nav class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
 
@@ -23,7 +22,10 @@
         </nav>
     </div>
     <h1>Skills</h1>
-    <h3>Java, HTML, CSS</h3><!--this will turn into a table eventually with 2 columns listing numerous skills on both sides (not just 3 languages)-->
+    <h3>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) • Object
+        Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language
+        (SQL) • Relational Databases • Source Control / Git</h3>
+    <!--this will turn into a table eventually with 2 columns listing numerous skills on both sides (not just 3 languages)-->
 </body>
 
 </html>
