commitment along the way to stay updated, I think I'm almost there :D

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./Pete_Solid.png">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 
 <body>
@@ -15,8 +16,6 @@
         <button class="dropdown-button">Menu</button>
         <nav class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="skills.html">Skills</a>
             </ul>
         </nav>
     </div>
