Commit to push changes, still changes I want to make but requirements are there. Potentially move projects to home page to eliminate any navigation?

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,12 @@
         </nav>
     </div>
     <h1>Projects</h1>
-    
-    </body>
+    <div class="projects">
+        <a href="https://github.com/2020-Fall-Cohort/method-completion-peteschaaf.git">Method Workshop</a><br>
+        <a href="https://github.com/2020-Fall-Cohort/kata-time-fizzbuzzqix-peteschaaf.git">FizzBuzz Kata Java
+            Practice</a><br>
+        <a href="https://github.com/2020-Fall-Cohort/virtual-pets-pj-2.git">Virtual Pet Project</a>
+    </div>
+</body>
 
 </html>
