--- a/projects.html
+++ b/projects.html
@@ -21,10 +21,16 @@
     </div>
     <h1>Projects</h1>
     <div class="projects">
-        <a href="https://github.com/2020-Fall-Cohort/method-completion-peteschaaf.git">Method Workshop</a><br>
+        <a href="https://github.com/2020-Fall-Cohort/method-completion-peteschaaf.git">Method Workshop</a>
+        
         <a href="https://github.com/2020-Fall-Cohort/kata-time-fizzbuzzqix-peteschaaf.git">FizzBuzz Kata Java
-            Practice</a><br>
+            Practice</a>
         <a href="https://github.com/2020-Fall-Cohort/virtual-pets-pj-2.git">Virtual Pet Project</a>
+    </div>
+    <div class="project-photos">
+        <img src="./MethodScreengrab.PNG">
+        <img src="./FizzBuzzScreengrab.PNG">
+        <img src="./VirtualPetScreengrab.PNG">
     </div>
 </body>
 
