Final push for a few days I need a break D:

--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,9 @@
         <a href="https://github.com/2020-Fall-Cohort/virtual-pets-pj-2.git">Virtual Pet Project</a>
     </div>
     <div class="project-photos">
-        <img src="./MethodScreengrab.PNG">
-        <img src="./FizzBuzzScreengrab.PNG">
-        <img src="./VirtualPetScreengrab.PNG">
+        <a href="https://github.com/2020-Fall-Cohort/method-completion-peteschaaf.git"><img src="./MethodScreengrab.PNG"></a>
+        <a href="https://github.com/2020-Fall-Cohort/kata-time-fizzbuzzqix-peteschaaf.git"><img src="./FizzBuzzScreengrab.PNG"></a>
+        <a href="https://github.com/2020-Fall-Cohort/virtual-pets-pj-2.git"><img src="./VirtualPetScreengrab.PNG"></a>
     </div>
 </body>
 
