moved file structure

--- a/index.html
+++ b/index.html
@@ -26,36 +26,27 @@
         <div class="self-photo-wrapper">
             <h3 class="about">About Me</h3>
             <p class="about-me-content">
-                Hi I'm Pete! I am a 27 year old software developer out of Columbus, Ohio. I am a big time problem
-                solver. I love doing puzzles, figuring things out, and just understanding how the world around me works.
-                I have been passionate about tech since I was really young, and the opportunity to get into the industry
-                quickly through a bootcamp was something I HAD to jump on. I like to think outside the box and find new
-                solutions to problems that may have already been solved. I am very very passionate about learning, it's
-                one of my favorite things to do. Someday I want to get into working with AI and machine learning, it's
-                just so cool! Other things about me: I love love LOVE the outdoors (rock climbing is my favorite
-                activity), I love video games, hockey, and my dog Norman.
+                Hi I'm Pete! I am a 27 year old software developer out of Columbus, Ohio. I am a big time problem solver. I love doing puzzles, figuring things out, and just understanding how the world around me works. I have been passionate about tech since I was really
+                young, and the opportunity to get into the industry quickly through a bootcamp was something I HAD to jump on. I like to think outside the box and find new solutions to problems that may have already been solved. I am very very passionate
+                about learning, it's one of my favorite things to do. Someday I want to get into working with AI and machine learning, it's just so cool! Other things about me: I love love LOVE the outdoors (rock climbing is my favorite activity), I love
+                video games, hockey, and my dog Norman.
 
             </p>
 
 
             <h3 class="about">Development Skills</h3>
-            <p class="about-me-content">Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid
-                • TDD • Agile (Scrum) • Object
-                Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query
-                Language
-                (SQL) • Relational Databases • Source Control / Git
+            <p class="about-me-content">Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML • CSS • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) • Relational
+                Databases • Source Control / Git
             </p>
 
-            <img src=./Self.jpg alt="Self protrait" class="self-photo">
+            <img src=./imgs/Self.jpg alt="Self protrait" class="self-photo">
 
         </div>
     </div>
     <div class="icons">
-        <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a" target="blank"><img src="./linkedin logo white.png"
-                alt="LinkedIn logo"></a>
-        <a href="https://www.github.com/peteschaaf" target="blank"><img src="./github logo white.png"
-                alt="Github Logo"></a>
-        <a href="mailto:peteschaaf.19@gmail.com" target="blank"><img src="./gmail logo white.png" alt="Gmail Logo"></a>
+        <a href="https://www.linkedin.com/in/pete-schaaf-6947b014a" target="blank"><img src="./imgs/linkedin logo white.png" alt="LinkedIn logo"></a>
+        <a href="https://www.github.com/peteschaaf" target="blank"><img src="./imgs/github logo white.png" alt="Github Logo"></a>
+        <a href="mailto:peteschaaf.19@gmail.com" target="blank"><img src="./imgs/gmail logo white.png" alt="Gmail Logo"></a>
     </div>
 </body>
 
